--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-minimal-pie-chart": "^8.0.1",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.7"
   },
